# chakra

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRACTS.md  DISCLAIMER.md  README.md  index.html  learn.html  manifest.webmanifest  misty.json  pro.html  seed-chakra.sh  sw.js  test-plan.json  tests.html  tour.html  zshare.config.json  zshare.js
.github/: ai_coding_manifest.md
.github/workflows/: ci.yml
attest/receipts/: 20260724T094514Z-PUSH-project-ilm_chakra.json  20260724T094514Z-PUSH-project-ilm_chakra.json.ots  20260724T164655Z-PUSH-project-ilm_chakra.json  20260724T164655Z-PUSH-project-ilm_chakra.json.ots
bindings/: README.md
bindings/csharp/: Chakra.cs  Chakra.csproj
bindings/cuda/: README.md  chakra_ephem.cu
bindings/go/: chakra.go  chakra_test.go  go.mod
bindings/gwbasic/: CHAKRA.BAS  CHAKRA_QB64.BAS  README.md
bindings/node/: index.js  package.json  test.js
bindings/python/: README.md  pyproject.toml
bindings/python/chakra_obs/: __init__.py  cli.py  core.py
bindings/rust/: Cargo.toml  build.rs
bindings/rust/src/: lib.rs
chakra-v1.1.0/: .gitignore  CHANGELOG.md  README.md  seed-chakra.sh
chakra-v1.1.0/docs/: ALMANAC-EVENTS.md  ARCHITECTURE.md  COMPARISON.md
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  BACKLOG.md  FURTHER-WORK.md
lib/: Makefile  README.md  chakra.c  chakra.h  chakra_cli.c  gen_vectors.js  test_chakra.c  vectors.h
scripts/: close-completed-issues.sh  mint-doi.sh
src/: chakra-api.js  chakra-core.js  chakra-kernel.js  chakra-site.js  chakra-ui.js  chakra-voyage.js
test/: test-api.js  test-bindings.js  test-events.js  test-orbits.js  test-smoke.js  test-vargas.js  test-voyage.js  test-yoga.js
(+8 files in other folders)
